--- a/app/assets/stylesheets/pages/modules/_nav.scss
+++ b/app/assets/stylesheets/pages/modules/_nav.scss
@@ -11,7 +11,7 @@
   }
 }
 
-#topbar .navbar .navbar-left li.active a {
+#topbar .navbar .navbar-left.nav-organizer li.active a {
   padding-top: 19px;
   padding-bottom: 18px;
   border-bottom: 3px solid #444;
