--- a/app/views/client/profiles/settings.html.erb
+++ b/app/views/client/profiles/settings.html.erb
@@ -1,7 +1,7 @@
 <script>$('body').attr('id', 'profile-settings-page');</script>
 <script>$('body').addClass('profile-page');</script>
 
-<%#= render partial: "layouts/parts/nav" %>
+<%#= render partial: "partials/nav" %>
 <script>
   $('#organizer-nav #menu-settings').addClass('active');
   $('#profile-nav #menu-settings').addClass('active');
