--- a/app/views/client/profiles/tickets.html.erb
+++ b/app/views/client/profiles/tickets.html.erb
@@ -1,7 +1,7 @@
 <script>$('body').attr('id', 'profile-ticket-list-page');</script>
 <script>$('body').addClass('profile-page');</script>
 
-<%#= render partial: "layouts/parts/nav" %>
+<%#= render partial: "partials/nav" %>
 <script>$('#profile-nav #menu-my-tickets').addClass('active');</script>
 
 <div class="section" id="ticket-list-section">
