--- a/app/views/layouts/greetings.html.erb
+++ b/app/views/layouts/greetings.html.erb
@@ -27,7 +27,7 @@
       }
     </style>
 
-    <%= render partial: "layouts/parts/tracking" %>
+    <%= render partial: "partials/tracking" %>
   </head>
   <body>
     <%= yield %>
