--- a/app/views/mailers/organizer/order.html.erb
+++ b/app/views/mailers/organizer/order.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "layouts_mailer/parts/order" %>
+<%= render partial: "mailers/parts/order" %>
 
 <!-- Section 3 -->
 <tr class="body-2">
