--- a/app/views/organizer/events/new.html.erb
+++ b/app/views/organizer/events/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :body_id, 'organizer-events-new' %>
 <% content_for :body_class, 'organizer-event-page' %>
-<%#= render partial: "layouts/parts/nav" %>
+<%#= render partial: "partials/nav" %>
 
 <div class="section">
   <div class="container">
