--- a/app/views/client/profiles/wishlist.html.erb
+++ b/app/views/client/profiles/wishlist.html.erb
@@ -1,7 +1,7 @@
 <script>$('body').attr('id', 'profile-wishlist-page');</script>
 <script>$('body').addClass('profile-page');</script>
 
-<%#= render partial: "layouts/parts/nav" %>
+<%#= render partial: "partials/nav" %>
 <script>$('#profile-nav #menu-wishlist').addClass('active');</script>
 
 <div class="section">
