--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -25,7 +25,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <%= render partial: "layouts/parts/tracking" %>
+    <%= render partial: "partials/tracking" %>
   </head>
   <body>
     <%= yield %>
