--- a/app/views/mailers/user/order.html.erb
+++ b/app/views/mailers/user/order.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "layouts_mailer/parts/order" %>
+<%= render partial: "mailers/parts/order" %>
 
 <% if @order.transfer? %>
   <!-- Section 3 -->
