--- a/app/views/organizer/events/attendees.html.erb
+++ b/app/views/organizer/events/attendees.html.erb
@@ -1,6 +1,6 @@
 <% content_for :body_id, 'organizer-event-attendees' %>
 <% content_for :body_class, 'organizer-event-page' %>
-<%= render partial: "layouts/parts/manage_nav" %>
+<%= render partial: "partials/manage_nav" %>
 <div class="section" id="checkin-attendees">
   <div class="container">
     <div class="section-body row">
