--- a/app/views/organizer/events/dashboard.html.erb
+++ b/app/views/organizer/events/dashboard.html.erb
@@ -1,6 +1,6 @@
 <% content_for :body_id, 'organizer-event-dashboard' %>
 <% content_for :body_class, 'organizer-event-page' %>
-<%= render partial: "layouts/parts/manage_nav" %>
+<%= render partial: "partials/manage_nav" %>
 <style media="screen">
   .dashboard {
     height: 120px;
