--- a/app/views/organizer/events/attendees.html.erb
+++ b/app/views/organizer/events/attendees.html.erb
@@ -1,15 +1,15 @@
 <% content_for :body_id, 'organizer-event-attendees' %>
 <% content_for :body_class, 'organizer-event-page' %>
 <%= render partial: "partials/manage_nav" %>
+
 <div class="section" id="checkin-attendees">
   <div class="container">
     <div class="section-body row">
       <div class="col-xs-12">
-        <% @sections.each do |section| %>
         <div class="event-section-panel">
           <div class="row panel-header">
             <div class="col-xs-12 col-md-6">
-              Attendees: <%= section.tickets.paid.count %>
+              Attendees: <%= @event.tickets.paid.count %>
             </div>
             <div class="col-xs-3 col-md-3 text-right export">
               <%= link_to attendees_organizer_event_path(format: :xlsx) do %>
@@ -17,10 +17,10 @@
               <% end %>
             </div>
             <div class="col-xs-6 col-md-3 text-right">
-              <select class="form-control">
-                <option selected disabled>เรียงตาม: Recent</option>
-                <option>1</option>
-                <option>2</option>
+              <select class="sort_by form-control">
+                <option selected disabled>จัดเรียงตาม: Sort by</option>
+                <option value="attendee_name">ชื่อลูกค้า</option>
+                <option value="order_date">วันที่สั่งซื้อ</option>
               </select>
             </div>
           </div>
@@ -40,7 +40,7 @@
                 </tr>
               </thead>
               <tbody>
-                <% section.tickets.each do |ticket| %>
+                <% @event.tickets.each do |ticket| %>
                   <% next unless ticket.order.paid? %>
                   <tr>
                     <% if ticket.status.used? %>
@@ -53,34 +53,25 @@
                     <td><%= ticket.user.age %></td>
                     <td><%= ticket.user.email %></td>
                     <td><%= ticket.user.phone %></td>
-                    <td><%= ticket.order.code %></td>
+                    <td>#<%= ticket.order.code %></td>
                     <td><%= ticket.order.created_at.strftime("%d %B %Y, %H:%M") %></td>
-                    <td><%= ticket.code %></td>
+                    <td>#<%= ticket.code %></td>
                   </tr>
                 <% end %>
               </tbody>
             </table>
           </div>
         </div>
-        <% end %>
       </div>
     </div>
   </div>
 </div>
-<script>
-  function init_table_filter() {
-    $('.table-filter').keyup(function () {
-      var element = this;
-      var table = $(element).parents('.event-section-panel').find('.table');
-      var rex = new RegExp($(this).val(), 'i');
-      $('tbody tr', table).hide();
-      $('tbody tr', table).filter(function () {
-          return rex.test($(this).text());
-      }).show();
-    })
-  }
 
-  $(function() {
-    init_table_filter();
+<script type="text/javascript">
+  $('.sort_by').on('change', function(){
+    var sort = $(this).val();
+    var url = location.protocol + '//' + location.host + location.pathname;
+    console.log(url + '?sort_by=' + sort);
+    window.location = url + '?sort_by=' + sort
   });
 </script>
