--- a/app/views/organizer/events/index.html.erb
+++ b/app/views/organizer/events/index.html.erb
@@ -8,7 +8,7 @@
         <div class="row">
           <div class="col-xs-9">
             <div class="text-inline ml-10">
-              <a href="<%= organizer_events_path %>">ALL (<%= @event.count %>)</a>
+              <a href="<%= organizer_events_path %>">ALL (<%= @event %>)</a>
             </div>
             <div class="text-inline ml-10">
               <a href="<%= organizer_events_path(filter: :live, sort: params[:sort]) %>">LIVE (<%= @live.count %>)</a>
@@ -21,10 +21,12 @@
             </div>
           </div>
           <div class="col-xs-3 text-right">
-            <select class="sort form-control">
-              <option selected disabled>เรียงตาม: Recent</option>
+            <select class="sort_by form-control">
+              <option selected disabled>จัดเรียงตาม: Sort by</option>
               <option value="asc">Ascending</option>
               <option value="desc">Descending</option>
+              <!-- <option value="">วันจัดงาน</option>
+              <option value="">วัน</option> -->
             </select>
           </div>
         </div>
@@ -113,26 +115,10 @@
   </div>
 </div>
 
-
 <script type="text/javascript">
-  $('.sort').on('change', function(){
+  $('.sort_by').on('change', function(){
     var sort = $(this).val();
-    var url = location.protocol + '//' + location.host + location.pathname
-    window.location = url + '?filter=' + getUrlParameter('filter') + '&sort=' + sort
+    var url = location.protocol + '//' + location.host + location.pathname;
+    window.location = url + '?filter=' + getUrlParameter('filter') + '&sort_by=' + sort;
   });
-
-  var getUrlParameter = function getUrlParameter(sParam) {
-      var sPageURL = decodeURIComponent(window.location.search.substring(1)),
-          sURLVariables = sPageURL.split('&'),
-          sParameterName,
-          i;
-
-      for (i = 0; i < sURLVariables.length; i++) {
-          sParameterName = sURLVariables[i].split('=');
-
-          if (sParameterName[0] === sParam) {
-              return sParameterName[1] === undefined ? true : sParameterName[1];
-          }
-      }
-  };
 </script>
