--- a/app/views/organizer/events/edit.html.erb
+++ b/app/views/organizer/events/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :body_id, 'organizer-events-edit' %>
-<% content_for :body_class, 'organizer-event-page' %>
+<% content_for :body_class, 'organizer-event' %>
 <%= render partial: "partials/manage_nav" %>
 <div class="section">
   <div class="container">
