--- a/app/views/organizer/events/index.html.erb
+++ b/app/views/organizer/events/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :body_id, 'organizer-event-list' %>
-<% content_for :body_class, 'organizer-event-page' %>
+<% content_for :body_class, 'organizer-event' %>
 
 <div class="section section-container">
   <div class="container">
