--- a/app/views/organizer/events/attendees.html.erb
+++ b/app/views/organizer/events/attendees.html.erb
@@ -1,5 +1,5 @@
 <% content_for :body_id, 'organizer-event-attendees' %>
-<% content_for :body_class, 'organizer-event-page' %>
+<% content_for :body_class, 'organizer-event' %>
 <%= render partial: "partials/manage_nav" %>
 
 <div class="section" id="checkin-attendees">
@@ -11,7 +11,7 @@
             <div class="col-xs-12 col-md-6">
               Attendees: <%= @event.tickets.paid.count %>
             </div>
-            <div class="col-xs-3 col-md-3 text-right export">
+            <div class="col-xs-3 text-right link">
               <%= link_to attendees_organizer_event_path(format: :xlsx) do %>
                 <i class="nc-icon-outline arrows-4_launch-47"></i> EXPORT
               <% end %>
@@ -53,7 +53,7 @@
                     <td><%= ticket.user.age %></td>
                     <td><%= ticket.user.email %></td>
                     <td><%= ticket.user.phone %></td>
-                    <td>#<%= ticket.order.code %></td>
+                    <td><%= link_to "##{ticket.order.code}", orders_detail_organizer_event_path(id: @event.slug, code: ticket.order.code) %></td>
                     <td><%= ticket.order.created_at.strftime("%d %B %Y, %H:%M") %></td>
                     <td>#<%= ticket.code %></td>
                   </tr>
