--- a/app/views/organizer/events/new.html.erb
+++ b/app/views/organizer/events/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :body_id, 'organizer-events-new' %>
-<% content_for :body_class, 'organizer-event-page' %>
+<% content_for :body_class, 'organizer-event' %>
 <%#= render partial: "partials/nav" %>
 
 <div class="section">
