--- a/app/views/organizer/events/dashboard.html.erb
+++ b/app/views/organizer/events/dashboard.html.erb
@@ -4,7 +4,7 @@
 
 <style media="screen">
   .dashboard {
-    height: 120px;
+    min-height: 120px;
     padding-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
@@ -30,18 +30,18 @@
     background-color: #17A41D;
   }
 </style>
-<div class="section" id="dashboard-show-section" style="height: 240px; background: #F3F3F3;">
+<div class="section" id="dashboard-show-section" style="min-height: 240px; background: #F3F3F3;">
   <div class="container">
     <div class="section-header row">
       <div class="col-xs-12">
         <div class="row">
-          <div class="col-xs-4">
+          <div class="col-xs-12 col-md-4">
             <div class="widget dashboard">
               <p style="font-size: 30pt; text-transform: uppercase; color: #17A41D;"><%= convert_to_currency(@total_sales) %></p>
               <p style="font-size: 14pt; text-transform: uppercase;">Total sales</p>
             </div>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-12 col-md-4">
             <div class="widget dashboard">
               <div class="number" style="margin-top: 15px">
                 <div style="display: inline-block; width: 50%; float: left"><%= '%.2f' % @percentage %>%</div>
@@ -55,8 +55,7 @@
               <p style="font-size: 14pt; text-transform: uppercase;">Tickets sold</p>
             </div>
           </div>
-          <!-- .try(:strftime, "%d") -->
-          <div class="col-xs-4">
+          <div class="col-xs-12 col-md-4">
             <div class="widget dashboard">
               <% if @live %>
                 <p style="font-size: 30pt; text-transform: uppercase; color: #000;">
