--- a/app/views/partials/_manage_nav.html.erb
+++ b/app/views/partials/_manage_nav.html.erb
@@ -1,7 +1,7 @@
 <div class="section" id="organizer-header-section">
   <div class="container">
     <div class="section-header row">
-      <div class="col-md-9">
+      <div class="col-xs-12 col-sm-12 col-md-8 col-lg-9">
         <h3 class="event-title" style="margin-top: 0px;">
           <%= @event.title %>
           <% if @event.uptime > Time.zone.now %>
@@ -12,9 +12,19 @@
         </h3>
         <p><%= @event.to_uptime %> at <%= @event.location_name %></p>
       </div>
-      <div class="col-md-3 text-right">
-        <a href="<%= edit_organizer_event_path(@event) %>" class="btn btn-daydash-grey-1"><i class="nc-icon-outline design_pen-01"></i> Edit</a>
-        <a href="<%= client_event_path(@event) %>" target="_blank" class="btn btn-daydash-grey-1"><i class="nc-icon-outline ui-1_eye-17"></i> View Event</a>
+      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 text-right">
+        <div class="row">
+          <div class="col-xs-6">
+            <%= link_to edit_organizer_event_path(@event), class: 'btn btn-daydash-grey-1 col-xs-12' do %>
+              <i class="nc-icon-outline design_pen-01"></i> Edit
+            <% end %>
+          </div>
+          <div class="col-xs-6">
+            <%= link_to client_event_path(@event),         class: 'btn btn-daydash-grey-1 col-xs-12' do %>
+              <i class="nc-icon-outline ui-1_eye-17"></i> View Event
+            <% end %>
+          </div>
+        </div>
       </div>
     </div>
 
