--- a/app/assets/stylesheets/pages/organizers.sass
+++ b/app/assets/stylesheets/pages/organizers.sass
@@ -48,6 +48,7 @@
     // padding: 6px 0px
     a
       color: #000
+      line-height: 35px
 
   .organizer-event-nav
     border-top: 1px solid #ddd
