--- a/app/views/organizer/events/attendees.html.erb
+++ b/app/views/organizer/events/attendees.html.erb
@@ -9,7 +9,7 @@
         <div class="event-section-panel">
           <div class="row panel-header">
             <div class="col-xs-12 col-md-6">
-              Attendees: <%= @event.tickets.paid.count %>
+              Attendees: <%= @tickets.paid.count %>
             </div>
             <div class="col-xs-3 text-right link">
               <%= link_to attendees_organizer_event_path(format: :xlsx) do %>
@@ -40,7 +40,7 @@
                 </tr>
               </thead>
               <tbody>
-                <% @event.tickets.each do |ticket| %>
+                <% @tickets.each do |ticket| %>
                   <% next unless ticket.order.paid? %>
                   <tr>
                     <% if ticket.status.used? %>
