--- a/app/views/partials/_top_nav.html.erb
+++ b/app/views/partials/_top_nav.html.erb
@@ -91,7 +91,6 @@
               <%= top_nav_link "+ Create New Event", new_organizer_event_path, 'menu-create-event' %>
             </ul>
           <% else %>
-            <!-- current_site == 'organizer' -->
             <ul class="nav navbar-nav navbar-left mobile-hide">
               <!-- <li>
                 <a href="#">Explore</a>
@@ -114,6 +113,26 @@
             </ul>
           <% end %>
         <% else %>
+          <ul class="nav navbar-nav navbar-left mobile-hide">
+            <!-- <li>
+              <a href="#">Explore</a>
+            </li>
+            <li>
+              <a href="#">Daydash คืออะไร</a>
+            </li> -->
+            <li>
+              <%= link_to 'ALL', root_path %>
+            </li>
+            <% @global_categories.each do |category| %>
+              <li>
+                <% if is_index_with_categories? %>
+                  <%= link_to category.title, 'javascript:;', class: 'category-filter', 'data-filter': category.id %>
+                <% else %>
+                  <a href="/categories/<%= category.slug %>"><%= category.title %></a>
+                <% end %>
+              </li>
+            <% end unless @global_categories.nil? %>
+          </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
               <a id="menu-login"
