--- a/app/views/greetings/about.html.erb
+++ b/app/views/greetings/about.html.erb
@@ -1,5 +1,6 @@
+<% content_for :body_id, 'index-page' %>
+<% content_for :body_class, 'index-page' %>
 
-<script>$('body').attr('id', 'index-page');</script>
 <div class="section" id="cover-section">
   <div class="slick" id="cover-slick">
     <% @covers.each do |cover| %>
