--- a/app/assets/stylesheets/pages/base.scss
+++ b/app/assets/stylesheets/pages/base.scss
@@ -1,6 +1,7 @@
 @import 'layout';
 @import 'modules/all';
 @import 'components';
+@import 'home';
 @import 'profiles';
 @import 'events';
 @import 'organizers';
