--- a/app/views/organizer/profiles/show.html.erb
+++ b/app/views/organizer/profiles/show.html.erb
@@ -1,4 +1,5 @@
-<script>$('body').attr('id', 'index-page');</script>
+<% content_for :body_id, 'index-page' %>
+<% content_for :body_class, 'index-page' %>
 
 <div class="section" id="cover-section">
   <div class="slick" id="cover-slick">
