--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -59,21 +59,22 @@
     <div class="row">
       <div class="col-xs-12 text-center">
         <h2>สงสัยใช่มั้ยว่า Daydash คืออะไร?</h2>
+        <p class="underline-title"></p>
       </div>
     </div>
-    <div class="row">
+    <div class="row mt-40">
       <div class="col-xs-12 col-md-4 text-center">
-        <i class="icon icon-ticket"></i>
+        <i class="nc-icon-title nc-icon-outline media-1_ticket-75"></i>
         <p>เว็บสำหรับคนชอบทำกิจกรรม</p>
         <p>Daydash คือเว็บรวบกิจกรรมและอีเว้นท์แนวไลฟ์สไตล์ให้คุณสามารถทำการจองและเข้าร่วมได้ทันทีในไม่กี่คลิก</p>
       </div>
       <div class="col-xs-12 col-md-4 text-center">
-        <i class="icon icon-"></i>
+        <i class="nc-icon-title nc-icon-outline travel_sea-mask"></i>
         <p>หลากหลายกิจกรรมให้เลือกทำ</p>
         <p>หลากหลายกิจกรรมบน Daydash ไม่ว่าจะเป็นงานดนตรี ดีเจ มันส์ๆ เวิร์คช็อปศิลปะ ไปจนถึงกิจกรรมเวิร์คเอาท์ออกกำลัง ฯลฯ</p>
       </div>
       <div class="col-xs-12 col-md-4 text-center">
-        <i class="icon icon"></i>
+        <i class="nc-icon-title nc-icon-outline education_award-55"></i>
         <p>เป็นตัวแทนถูกต้อง 100%</p>
         <p>Daydash ได้รับการยอมรับให้เป็นตัวแทนจากผู้จัดโดยตรง ทุกกิจกรรม อีเว้นท์ ที่อยู่บน Daydash แปลว่าคุณสามารถทำการซื้อและเข้าร่วมได้แน่นอน</p>
       </div>
@@ -86,6 +87,7 @@
     <div class="row">
       <div class="col-xs-12 text-center">
         <h2>กิจกรรมแนะนำ</h2>
+        <p class="underline-title"></p>
       </div>
     </div>
     <div class="row">
@@ -122,6 +124,7 @@
     <div class="row">
       <div class="col-xs-12 text-center">
         <h2>กิจกรรมสำหรับเสาร์อาทิตย์นี้</h2>
+        <p class="underline-title"></p>
       </div>
     </div>
     <div class="row">
@@ -159,16 +162,24 @@
 <section class="subscribe">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 text-center">
         <h2>ไม่อยากพลาดกิจกรรมและอีเว้นท์สนุกๆ?</h2>
         <p>ทุกสัปดาห์ เราจะส่งอีเมลอัพเดททุกเรื่องเกี่ยวกับกิจกรรม อีเว้นท์ไปให้คุณถึง inbox!</p>
       </div>
-      <div class="col-xs-12">
-        <input type="text" name="" value="" placeholder="อีเมลของคุณ">
-        <div class="btn btn-default">
-          สมัครฟรี!
-        </div>
-        <p>* เราไม่มีนโยบายส่ง spam หรือนำรายชื่ออีเมลไปเปิดเผยเด็ดขาด</p>
+    </div>
+    <div class="row mt-10">
+      <div class="col-xs-12 text-center">
+        <form class="form-inline">
+          <div class="input-group col-xs-12 col-md-9 col-lg-6">
+            <input type="text" class="form-control subscribe" placeholder="อีเมลของคุณ">
+            <div class="input-group-addon subscribe">สมัครฟรี!</div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="row mt-20">
+      <div class="col-xs-12 text-center">
+        <p class="note">* เราไม่มีนโยบายส่ง spam หรือนำรายชื่ออีเมลไปเปิดเผยเด็ดขาด</p>
       </div>
     </div>
   </div>
