--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -34,8 +34,8 @@
   </div>
 </div> -->
 
-<section class="cover">
-  <div class="page-cover" style="background-image: url('<%= @covers[0][:image] %>')">
+<section class="cover" style="background-image: url('<%= @covers[0][:image] %>')">
+  <!-- <div class="page-cover"> -->
     <div class="container">
       <div class="row">
         <div class="col-xs-12 text-center">
@@ -45,13 +45,13 @@
           <div class="sub-title">
             ค้นพบกิจกรรม และอีเวนท์เจ๋งๆ พร้อมสัมผัสประสบการณ์ใหม่ๆ ได้ที่นี่
           </div>
-          <div class="btn btn-daydash-cover">
+          <div class="btn btn-cover mt-20">
             เริ่มเลย!
           </div>
         </div>
       </div>
     </div>
-  </div>
+  <!-- </div> -->
 </section>
 
 <section class="title">
@@ -112,9 +112,13 @@
 <section class="category">
   <div class="container">
     <div class="row">
-      <div class="col-xs-3">
-        <p>Workshop & Class</p>
-      </div>
+      <ul class="nav nav-pills">
+        <% @global_categories.each do |category| %>
+          <li>
+            <%= link_to category.title, 'javascript:;', class: 'category-filter', 'data-filter': category.id %>
+          </li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </section>
@@ -149,7 +153,7 @@
 <section class="comment">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 text-center">
         <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
         <p>
           คุณ Boy Pakorn
@@ -158,6 +162,16 @@
     </div>
   </div>
 </section>
+
+<script type="text/javascript">
+  $('.one-time').slick({
+    dots: true,
+    infinite: true,
+    speed: 300,
+    slidesToShow: 1,
+    adaptiveHeight: true
+  });
+</script>
 
 <section class="subscribe">
   <div class="container">
