--- a/app/views/layouts/react.html.erb
+++ b/app/views/layouts/react.html.erb
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daydash.co</title>
     <%= csrf_meta_tags %>
-    <%= javascript_include_tag 'webpack-bundle' %>
 
+    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <%= javascript_include_tag 'webpack-bundle' %>
   </head>
   <body>
-    <h1>Hello ReactJS</h1>
     <%= react_component("App", props: @hello_world_props, prerender: false) %>
   </body>
 </html>
