--- a/app/views/layouts/react.html.erb
+++ b/app/views/layouts/react.html.erb
@@ -8,6 +8,35 @@
     <%= csrf_meta_tags %>
 
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <style media="screen">
+      .search-bar {
+        margin: 20px;
+        text-align: center;
+      }
+
+      .search-bar input {
+        width: 75%;
+      }
+
+      .video-item img {
+        max-width: 64px;
+      }
+
+      .video-item .details {
+        margin-top: 10px;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+      }
+
+      .list-group-item {
+        cursor: pointer;
+      }
+
+      .list-group-item:hover {
+        background-color: #eee;
+      }
+    </style>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <%= javascript_include_tag 'webpack-bundle' %>
   </head>
