--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -7,6 +7,23 @@ body.home {
     font-family: "Kanit";
   }
 
+  p.icon {
+    margin-bottom: 35px;
+  }
+
+  p {
+    font-family: 'Athiti';
+  }
+
+  .box-center {
+    font-size: 14pt;
+    color: #414141;
+    font-weight: 100;
+    font-family: 'Athiti';
+    width: 40%;
+    margin: auto;
+  }
+
   .underline-title {
     border: 1px solid #19D4D6;
     width: 80px;
