--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -64,17 +64,23 @@
     </div>
     <div class="row mt-40">
       <div class="col-xs-12 col-md-4 text-center">
-        <i class="nc-icon-title nc-icon-outline media-1_ticket-75"></i>
+        <p class="icon">
+          <i class="nc-icon-title nc-icon-outline media-1_ticket-75"></i>
+        </p>
         <p>เว็บสำหรับคนชอบทำกิจกรรม</p>
         <p>Daydash คือเว็บรวบกิจกรรมและอีเว้นท์แนวไลฟ์สไตล์ให้คุณสามารถทำการจองและเข้าร่วมได้ทันทีในไม่กี่คลิก</p>
       </div>
       <div class="col-xs-12 col-md-4 text-center">
-        <i class="nc-icon-title nc-icon-outline travel_sea-mask"></i>
+        <p class="icon">
+          <i class="nc-icon-title nc-icon-outline travel_sea-mask"></i>
+        </p>
         <p>หลากหลายกิจกรรมให้เลือกทำ</p>
         <p>หลากหลายกิจกรรมบน Daydash ไม่ว่าจะเป็นงานดนตรี ดีเจ มันส์ๆ เวิร์คช็อปศิลปะ ไปจนถึงกิจกรรมเวิร์คเอาท์ออกกำลัง ฯลฯ</p>
       </div>
       <div class="col-xs-12 col-md-4 text-center">
-        <i class="nc-icon-title nc-icon-outline education_award-55"></i>
+        <p class="icon">
+          <i class="nc-icon-title nc-icon-outline education_award-55"></i>
+        </p>
         <p>เป็นตัวแทนถูกต้อง 100%</p>
         <p>Daydash ได้รับการยอมรับให้เป็นตัวแทนจากผู้จัดโดยตรง ทุกกิจกรรม อีเว้นท์ ที่อยู่บน Daydash แปลว่าคุณสามารถทำการซื้อและเข้าร่วมได้แน่นอน</p>
       </div>
@@ -154,10 +160,12 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 text-center">
-        <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
-        <p>
-          คุณ Boy Pakorn
-        </p>
+        <div class="box-center">
+          <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
+          <p>
+            คุณ Boy Pakorn
+          </p>
+        </div>
       </div>
     </div>
   </div>
