--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -64,21 +64,21 @@
     </div>
     <div class="row mt-40">
       <div class="col-xs-12 col-md-4 text-center">
-        <p class="icon">
+        <p class="p-icon">
           <i class="nc-icon-title nc-icon-outline media-1_ticket-75"></i>
         </p>
         <p>เว็บสำหรับคนชอบทำกิจกรรม</p>
         <p>Daydash คือเว็บรวบกิจกรรมและอีเว้นท์แนวไลฟ์สไตล์ให้คุณสามารถทำการจองและเข้าร่วมได้ทันทีในไม่กี่คลิก</p>
       </div>
       <div class="col-xs-12 col-md-4 text-center">
-        <p class="icon">
+        <p class="p-icon">
           <i class="nc-icon-title nc-icon-outline travel_sea-mask"></i>
         </p>
         <p>หลากหลายกิจกรรมให้เลือกทำ</p>
         <p>หลากหลายกิจกรรมบน Daydash ไม่ว่าจะเป็นงานดนตรี ดีเจ มันส์ๆ เวิร์คช็อปศิลปะ ไปจนถึงกิจกรรมเวิร์คเอาท์ออกกำลัง ฯลฯ</p>
       </div>
       <div class="col-xs-12 col-md-4 text-center">
-        <p class="icon">
+        <p class="p-icon">
           <i class="nc-icon-title nc-icon-outline education_award-55"></i>
         </p>
         <p>เป็นตัวแทนถูกต้อง 100%</p>
