--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -97,9 +97,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 card-slide">
         <% @events.each do |event| %>
-          <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %> event-category-<%= category.id %><% end %>">
+          <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %>event-category-<%= category.id %><% end %>">
             <%= link_to client_event_path(event.to_url), class: "event card" do %>
               <div class="cover" style="background-image: url('<%= event.get_thumbnail %>');"></div>
               <div class="info">
@@ -110,6 +110,7 @@
             <% end %>
           </div>
         <% end %>
+
       </div>
     </div>
   </div>
@@ -159,27 +160,25 @@
 <section class="comment">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 text-center">
-        <div class="box-center">
-          <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
-          <p>
-            คุณ Boy Pakorn
-          </p>
+      <div class="col-xs-12">
+        <div class="col-xs-12 col-md-6 text-center block-center comment-details comment-slides">
+          <div>
+            <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
+            <p>
+              คุณ Boy Pakorn
+            </p>
+          </div>
+          <div>
+            <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
+            <p>
+              คุณ Boy Pakorn
+            </p>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </section>
-
-<script type="text/javascript">
-  $('.one-time').slick({
-    dots: true,
-    infinite: true,
-    speed: 300,
-    slidesToShow: 1,
-    adaptiveHeight: true
-  });
-</script>
 
 <section class="subscribe">
   <div class="container">
@@ -206,3 +205,60 @@
     </div>
   </div>
 </section>
+
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.card-slide').slick({
+      slidesToShow: 3,
+      slidesToScroll: 1,
+      responsive: [
+        {
+          breakpoint: 1024,
+          settings: {
+            slidesToShow: 2,
+            slidesToScroll: 1,
+            infinite: true,
+            dots: true
+          }
+        },
+        {
+          breakpoint: 768,
+          settings: {
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            infinite: true,
+            dots: true
+          }
+        },
+      ]
+    });
+  });
+</script>
+
+<style>
+
+.slick-prev, .slick-next {
+  width: 30px;
+}
+.slick-prev:before, .slick-next:before {
+  font-family: "Nucleo Outline";
+  font-size: 30px;
+  color: #000;
+}
+.slick-prev:before { content: "\eaae"; }
+.slick-next:before { content: "\eaaf"; }
+</style>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.comment-slides').slick({
+      arrows: false,
+      dots: true,
+      infinite: true,
+      speed: 300,
+      slidesToShow: 1,
+      adaptiveHeight: true
+    });
+  });
+</script>
