--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -97,20 +97,21 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 card-slide">
-        <% @events.each do |event| %>
-          <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %>event-category-<%= category.id %><% end %>">
-            <%= link_to client_event_path(event.to_url), class: "event card" do %>
-              <div class="cover" style="background-image: url('<%= event.get_thumbnail %>');"></div>
-              <div class="info">
-                <h4 class="title text-left"><%= event.title %></h4>
-                <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.to_uptime %></div>
-                <div class="meta location"><i class="icon icon-xs icon-location"></i> <%= event.location_name %></div>
-              </div>
-            <% end %>
-          </div>
-        <% end %>
-
+      <div class="col-xs-12">
+        <div class="card-slides">
+          <% @events.each do |event| %>
+            <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %>event-category-<%= category.id %><% end %>">
+              <%= link_to client_event_path(event.to_url), class: "event card" do %>
+                <div class="cover" style="background-image: url('<%= event.get_thumbnail %>');"></div>
+                <div class="info">
+                  <h4 class="title text-left"><%= event.title %></h4>
+                  <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.to_uptime %></div>
+                  <div class="meta location"><i class="icon icon-xs icon-location"></i> <%= event.location_name %></div>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
@@ -205,60 +206,3 @@
     </div>
   </div>
 </section>
-
-
-<script type="text/javascript">
-  $(document).ready(function(){
-    $('.card-slide').slick({
-      slidesToShow: 3,
-      slidesToScroll: 1,
-      responsive: [
-        {
-          breakpoint: 1024,
-          settings: {
-            slidesToShow: 2,
-            slidesToScroll: 1,
-            infinite: true,
-            dots: true
-          }
-        },
-        {
-          breakpoint: 768,
-          settings: {
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            infinite: true,
-            dots: true
-          }
-        },
-      ]
-    });
-  });
-</script>
-
-<style>
-
-.slick-prev, .slick-next {
-  width: 30px;
-}
-.slick-prev:before, .slick-next:before {
-  font-family: "Nucleo Outline";
-  font-size: 30px;
-  color: #000;
-}
-.slick-prev:before { content: "\eaae"; }
-.slick-next:before { content: "\eaaf"; }
-</style>
-
-<script type="text/javascript">
-  $(document).ready(function(){
-    $('.comment-slides').slick({
-      arrows: false,
-      dots: true,
-      infinite: true,
-      speed: 300,
-      slidesToShow: 1,
-      adaptiveHeight: true
-    });
-  });
-</script>
