--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -98,19 +98,21 @@
     </div>
     <div class="row">
       <div class="col-xs-12">
-        <div class="card-slides">
-          <% @events.each do |event| %>
-            <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %>event-category-<%= category.id %><% end %>">
-              <%= link_to client_event_path(event.to_url), class: "event card" do %>
-                <div class="cover" style="background-image: url('<%= event.get_thumbnail %>');"></div>
-                <div class="info">
-                  <h4 class="title text-left"><%= event.title %></h4>
-                  <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.to_uptime %></div>
-                  <div class="meta location"><i class="icon icon-xs icon-location"></i> <%= event.location_name %></div>
-                </div>
-              <% end %>
-            </div>
-          <% end %>
+        <div class="row">
+          <div class="card-slides">
+            <% @events.each do |event| %>
+              <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %>event-category-<%= category.id %><% end %>">
+                <%= link_to client_event_path(event.to_url), class: "event card" do %>
+                  <div class="cover" style="background-image: url('<%= event.get_thumbnail %>');"></div>
+                  <div class="info">
+                    <h4 class="title text-left"><%= event.title %></h4>
+                    <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.to_uptime %></div>
+                    <div class="meta location"><i class="icon icon-xs icon-location"></i> <%= event.location_name %></div>
+                  </div>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
@@ -141,18 +143,20 @@
     </div>
     <div class="row">
       <div class="col-xs-12">
-        <% @events.each do |event| %>
-          <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %> event-category-<%= category.id %><% end %>">
-            <%= link_to client_event_path(event.to_url), class: "event card" do %>
-              <div class="cover" style="background-image: url('<%= event.get_thumbnail %>');"></div>
-              <div class="info">
-                <h4 class="title text-left"><%= event.title %></h4>
-                <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.to_uptime %></div>
-                <div class="meta location"><i class="icon icon-xs icon-location"></i> <%= event.location_name %></div>
-              </div>
-            <% end %>
-          </div>
-        <% end %>
+        <div class="row">
+          <% @events.each do |event| %>
+            <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %> event-category-<%= category.id %><% end %>">
+              <%= link_to client_event_path(event.to_url), class: "event card" do %>
+                <div class="cover" style="background-image: url('<%= event.get_thumbnail %>');"></div>
+                <div class="info">
+                  <h4 class="title text-left"><%= event.title %></h4>
+                  <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.to_uptime %></div>
+                  <div class="meta location"><i class="icon icon-xs icon-location"></i> <%= event.location_name %></div>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
@@ -161,17 +165,19 @@
 <section class="comment">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
-        <div class="col-xs-12 col-md-6 text-center block-center comment-details comment-slides">
+      <div class="col-xs-12 col-md-6">
+        <div class="text-center block-center comment-details comment-slides">
           <div>
             <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
             <p>
+              <img src="<%= "#{App.domain}/src/images/profile/missing-profile.png" %>" width="44" height="44" style="display: inline-block; border-radius: 50px;" />
               คุณ Boy Pakorn
             </p>
           </div>
           <div>
             <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
             <p>
+              <img src="<%= "#{App.domain}/src/images/profile/missing-profile.png" %>" width="44" height="44" style="display: inline-block; border-radius: 50px;" />
               คุณ Boy Pakorn
             </p>
           </div>
