--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -58,6 +58,13 @@
   }
   .slick-prev:before { content: "\eaae"; }
   .slick-next:before { content: "\eaaf"; }
+  .slick-dots li button:before {
+    font-size: 14px;
+    color: #19D4D6;
+  }
+  .slick-dots li.slick-active button:before {
+    color: #19D4D6;
+  }
 
   section {
     padding-bottom: 40px;
