--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -161,17 +161,19 @@
 <section class="comment">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
-        <div class="col-xs-12 col-md-6 text-center block-center comment-details comment-slides">
+      <div class="col-xs-12 col-md-6 text-center block-center comment-details">
+        <div class="comment-slides">
           <div>
             <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
             <p>
+              <img src="<%= "#{App.domain}/src/images/profile/missing-profile.png" %>" width="44" height="44" style="display: inline-block; border-radius: 50px;" />
               คุณ Boy Pakorn
             </p>
           </div>
           <div>
             <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
             <p>
+              <img src="<%= "#{App.domain}/src/images/profile/missing-profile.png" %>" width="44" height="44" style="display: inline-block; border-radius: 50px;" />
               คุณ Boy Pakorn
             </p>
           </div>
