--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -1,41 +1,7 @@
 <% content_for :body_id, 'home' %>
 <% content_for :body_class, 'home' %>
 
-<!-- <div class="section" id="cover-section">
-  <div class="slick" id="cover-slick">
-    <% @covers.each do |cover| %>
-      <div>
-        <div class="page-cover" style="background-image: url('<%= cover[:image] %>')">
-          <div class="info">
-            <div class="container">
-              <div class="caption"><%= raw(cover[:caption]) %></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    <% end %>
-  </div>
-</div>
-<div class="section" id="event-section">
-  <div class="container">
-    <ul class="nav nav-pills nav-daydash nav-daydash-lg nav-daydash-green">
-      <li class="active">
-        <%= link_to 'ALL', 'javascript:;', class: 'category-filter', 'data-filter': 0 %>
-      </li>
-      <% @global_categories.each do |category| %>
-        <li>
-          <%= link_to category.title, 'javascript:;', class: 'category-filter', 'data-filter': category.id %>
-        </li>
-      <% end %>
-    </ul>
-    <div class="row event-list">
-
-    </div>
-  </div>
-</div> -->
-
 <section class="cover" style="background-image: url('<%= @covers[0][:image] %>')">
-  <!-- <div class="page-cover"> -->
     <div class="container">
       <div class="row">
         <div class="col-xs-12 text-center">
@@ -51,7 +17,6 @@
         </div>
       </div>
     </div>
-  <!-- </div> -->
 </section>
 
 <section class="title">
@@ -152,6 +117,11 @@
                   <h4 class="title text-left"><%= event.title %></h4>
                   <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.to_uptime %></div>
                   <div class="meta location"><i class="icon icon-xs icon-location"></i> <%= event.location_name %></div>
+                  <!-- <div class="meta rating"></div> -->
+                  <div class="meta price text-right">
+                    <p>x</p>
+                    <p><%= convert_to_currency(100) %></p>
+                  </div>
                 </div>
               <% end %>
             </div>
@@ -200,7 +170,7 @@
         <form class="form-inline">
           <div class="input-group col-xs-12 col-md-9 col-lg-6">
             <input type="text" class="form-control subscribe" placeholder="อีเมลของคุณ">
-            <div class="input-group-addon subscribe">สมัครฟรี!</div>
+            <div class="btn input-group-addon subscribe">สมัครฟรี!</div>
           </div>
         </form>
       </div>
