--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -53,7 +53,7 @@
   </div>
 </section>
 
-<section class="recommend">
+<!-- <section class="recommend">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 text-center">
@@ -96,7 +96,7 @@
       </ul>
     </div>
   </div>
-</section>
+</section> -->
 
 <section class="this-week">
   <div class="container">
