--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -118,10 +118,10 @@
                   <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.to_uptime %></div>
                   <div class="meta location"><i class="icon icon-xs icon-location"></i> <%= event.location_name %></div>
                   <!-- <div class="meta rating"></div> -->
-                  <div class="meta price text-right">
+                  <!-- <div class="meta price text-right">
                     <p>x</p>
                     <p><%= convert_to_currency(100) %></p>
-                  </div>
+                  </div> -->
                 </div>
               <% end %>
             </div>
@@ -141,16 +141,16 @@
             <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
             <p>
               <img src="<%= "#{App.domain}/src/images/profile/missing-profile.png" %>" width="44" height="44" style="display: inline-block; border-radius: 50px;" />
-              คุณ Boy Pakorn
+              คุณ Arnon Hongklay
             </p>
           </div>
-          <div>
+          <!-- <div>
             <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
             <p>
               <img src="<%= "#{App.domain}/src/images/profile/missing-profile.png" %>" width="44" height="44" style="display: inline-block; border-radius: 50px;" />
               คุณ Boy Pakorn
             </p>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
