--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -79,10 +79,10 @@
           <!-- <div class="copyright">© 2016 Daydash.co</div> -->
           <ul class="list-body list-inline">
             <li>
-              <%= link_to "Terms & Conditions", terms_and_conditions_path %>
+              <%#= link_to "Terms & Conditions", terms_and_conditions_path %>
             </li>
             <li>
-              <%= link_to "Privacy Policy", privacy_policy_path %>
+              <%#= link_to "Privacy Policy", privacy_policy_path %>
             </li>
           </ul>
         </div>
