--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -33,14 +33,14 @@
         </li>
       <% else %>
         <li id="menu-my-tickets">
-          <%= link_to "My Tickets", client_profile_tickets_path(current_user) %>
+          <%#= link_to "My Tickets", client_profile_tickets_path(current_user) %>
         </li>
         <li id="menu-my-orders">
-          <%= link_to "My Orders", client_profile_orders_path(current_user) %>
+          <%#= link_to "My Orders", client_profile_orders_path(current_user) %>
         </li>
       <% end %>
       <li id="menu-settings">
-        <%= link_to "My Account", client_profile_settings_path(current_user) %>
+        <%#= link_to "My Account", client_profile_settings_path(current_user) %>
       </li>
     </ul>
   </div>
