--- a/app/views/partials/_top_nav.html.erb
+++ b/app/views/partials/_top_nav.html.erb
@@ -36,14 +36,14 @@
               <%= top_nav_link "+ Create New Event", new_organizer_event_path, 'menu-create-event' %>
             <% else %>
               <li>
-                <%= link_to "My Tickets", client_profile_tickets_path(current_user) %>
+                <%#= link_to "My Tickets", client_profile_tickets_path(current_user) %>
               </li>
               <li>
-                <%= link_to "My Orders", client_profile_orders_path(current_user) %>
+                <%#= link_to "My Orders", client_profile_orders_path(current_user) %>
               </li>
             <% end %>
             <li>
-              <%= link_to "My Account", client_profile_settings_path(current_user) %>
+              <%#= link_to "My Account", client_profile_settings_path(current_user) %>
             </li>
             <li>
               <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
@@ -69,14 +69,14 @@
               <ul class="dropdown-menu">
                 <% unless current_user.can_organizer? %>
                   <li>
-                    <%= link_to "My Tickets", client_profile_tickets_path(current_user) %>
+                    <%#= link_to "My Tickets", client_profile_tickets_path(current_user) %>
                   </li>
                   <li>
-                    <%= link_to "My Orders", client_profile_orders_path(current_user) %>
+                    <%#= link_to "My Orders", client_profile_orders_path(current_user) %>
                   </li>
                 <% end %>
                 <li>
-                  <%= link_to "My Account", client_profile_settings_path(current_user) %>
+                  <%#= link_to "My Account", client_profile_settings_path(current_user) %>
                 </li>
                 <li>
                   <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
